Fix tables alignments

--- a/gites/calendar/browser/resources/timeframe.css
+++ b/gites/calendar/browser/resources/timeframe.css
@@ -166,7 +166,6 @@ text-decoration:none;
 div.timeframe_calendar table {
 border-collapse: collapse;
 display: inline;
-display: inline-block;
 font-size: 15px;
 margin: 0 6px 12px;
 }
